# py-xrd-visualize

./: .gitignore  README.md  pyproject.toml
py-xrd-visualize/: graph.py
src/main/: main.py
src/py_xrd_visualize/: XYs.py  user.py  util.py  visualize.py  xrd.py
src/test/: test.xy  test_main.py  test_rock_13-19_0.01deg.xy  test_rock_13.5-20.5_0.01deg.xy  test_rock_14.5-16.5_0.01deg.xy  test_xrd.py
src/visualize/: util.py  visualize.py  xrd.py
