[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-xrd-visualize"
# description = ""
# readme = "README.md"
# requires-python = ">=3.10"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]
version = "0.0.0"
# dependencies = ["numpy"]
# dynamic = ["version"]

# [project.urls]
# "Homepage" = ""

# [tool.setuptools-git-versioning]
# enabled = true

# authers = ["oksongh"]
