[project]
name = "py-xrd-visualize"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "om-hands", email = "okumuramasaki.hands@gmail.com" }]
dependencies = [
    "matplotlib~=3.7.1",
    "numpy~=1.24.3",
    "xrd-xy-parser~=0.0.3",
    "PyQt5~=5.15.9",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
